--- a/empty.html
+++ b/empty.html
@@ -165,6 +165,8 @@ Error message and password prompt
 
 <li>$:/state/tab-2065006209</li>
 
+<li>$:/state/tab/sidebar--595412856</li>
+
 <li>$:/status/RequireReloadDueToPluginChange</li>
 
 <li>$:/StoryList</li>
@@ -10081,19 +10083,22 @@ Error message and password prompt
 <div created="20210619163017495" modified="20210619163021413" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
-<div created="20210619163056460" modified="20210619163056460" title="$:/state/tab--86143343">
-<pre>$:/core/ui/ControlPanel/Plugins/Installed/Themes</pre>
+<div created="20210619163056460" modified="20210619163307507" title="$:/state/tab--86143343">
+<pre>$:/core/ui/ControlPanel/Plugins/Installed/Plugins</pre>
 </div>
-<div created="20210619162344436" modified="20210619163029289" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Plugins</pre>
+<div created="20210619162344436" modified="20210619163316512" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20210619162425173" modified="20210619163008681" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
+<div created="20210619163253298" modified="20210619163253298" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Recent</pre>
+</div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210619162340737" list="[[First Tiddle]] $:/ControlPanel $:/themes/tiddlywiki/tight GettingStarted" modified="20210619163058070" title="$:/StoryList">
+<div created="20210619162340737" list="$:/ControlPanel" modified="20210619163328023" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210619162346691" modified="20210619162347980" title="$:/theme">
